Bug 119900 - After Scrolling a Long Chapter List in the Navigator, the Focus Jumps Back to Chapter with the Cursor in Content Navigation View
Summary: After Scrolling a Long Chapter List in the Navigator, the Focus Jumps Back to...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0
Keywords: regression
Depends on:
Blocks: Navigator
  Show dependency treegraph
 
Reported: 2018-09-15 22:00 UTC by Harald Koester
Modified: 2019-04-09 08:40 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example document (22.86 KB, application/vnd.oasis.opendocument.text)
2018-09-15 22:00 UTC, Harald Koester
Details
screencast (2.84 MB, video/mp4)
2018-09-20 09:08 UTC, Xisco Faulí
Details
sidebar screencast (20.39 MB, video/mp4)
2018-09-20 20:00 UTC, Jim Raykowski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Koester 2018-09-15 22:00:27 UTC
Created attachment 144905 [details]
Example document

In order to reproduce:

[1] Open attached document.
[2] Display the Navigator: F5.
[3] Expand “Überschrift 1” in Navigator.
[4] In the text click into chapter “Überschrift 1”. The cursor is set to this position.
[5] Suppose you want to go to the last chapter: Scroll down the slider in the Navigator either by pulling it down or with the mouse wheel. Within a second the slider jumps back to the initial position. This is so fast, that you can't click on the last chapter. Expected: No jump back.

The bug is new in version 6.1.0. Version 6.0.6 works correctly. Hence it's a regression.
Comment 1 Jean-Baptiste Faure 2018-09-16 08:28:35 UTC
Not reproducible for me with LO 6.1.1 under Ubuntu 18.04 x86-64.
Please could you upgrade your version of LibreOffice 6.1 to the last update 6.1.1 and try again?

Status set to NEEDINFO, please set it back to UNCONFIRMED once requested
informations are provided.

Best regards. JBF
Comment 2 Juergen 2018-09-16 15:48:39 UTC
With LO 6.1.1.2 (x64) under Win10 it is the same wrong behaviour as described.
Comment 3 Harald Koester 2018-09-17 14:56:37 UTC
Also checked with version 6.1.1. Bug still exists.
Comment 4 Xisco Faulí 2018-09-18 14:04:23 UTC
I can reproduce it using the 'content navigation view'

Version: 6.2.0.0.alpha0+
Build ID: 2419fa71d8b2223a50f596d5db7721f6213d4f87
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded
Comment 5 Xisco Faulí 2018-09-18 14:31:50 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=3a9877b74e1730424a41319a03f5b56a6102a76b

author	Jim Raykowski <raykowj@gmail.com>	2017-12-28 08:46:00 -0900
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2018-01-05 17:55:06 +0100
commit 3a9877b74e1730424a41319a03f5b56a6102a76b (patch)
tree fb442b99960b5824960044365590014295aff1cf
parent 52bab68b384309d618b03373b247401c9bcfd3de (diff)
tdf#114724 fix headings outline tracking highlight in Navigator

Bisected with: bibisect-linux64-6.1

Adding Cc: to Jim Raykowski
Comment 6 Jim Raykowski 2018-09-19 21:58:27 UTC
(In reply to Xisco Faulí from comment #5)
> Regression introduced by:
> 
> https://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=3a9877b74e1730424a41319a03f5b56a6102a76b
> 
> author	Jim Raykowski <raykowj@gmail.com>	2017-12-28 08:46:00 -0900
> committer	Miklos Vajna <vmiklos@collabora.co.uk>	2018-01-05 17:55:06 +0100
> commit 3a9877b74e1730424a41319a03f5b56a6102a76b (patch)
> tree fb442b99960b5824960044365590014295aff1cf
> parent 52bab68b384309d618b03373b247401c9bcfd3de (diff)
> tdf#114724 fix headings outline tracking highlight in Navigator
> 
> Bisected with: bibisect-linux64-6.1
> 
> Adding Cc: to Jim Raykowski

Reproducible when patch is removed. Reproducible in windows version 5.4.7.2 much before tdf#114724 patch merge. Not reproducible in Linux version 5.1.6.2
Comment 7 Xisco Faulí 2018-09-20 09:05:43 UTC
> Reproducible when patch is removed. Reproducible in windows version 5.4.7.2
> much before tdf#114724 patch merge. Not reproducible in Linux version 5.1.6.2

That's weird, I've just reverted the commit and I can no longer reproduce the problem. Let me create a screencast to make it clearer
Comment 8 Xisco Faulí 2018-09-20 09:08:06 UTC
Created attachment 145055 [details]
screencast
Comment 9 Xisco Faulí 2018-09-20 09:09:34 UTC
So, when I scroll the list of headings, it gets updated after 1 second to the point where the selected item is
Comment 10 Jim Raykowski 2018-09-20 20:00:53 UTC
Created attachment 145080 [details]
sidebar screencast

This is interesting. I used the Navigator in the sidebar. From the screen cast you made I see there is difference between the Sidebar Navigator and the F5 Navigator window.  

Attached is a demo video how to reproduce the bug in the Sidebar Navigator pre patch.
Comment 11 Jim Raykowski 2018-09-21 06:37:34 UTC
Further investigation has shown this can be duplicated in the F5 Navigator window with the patch reverted and in pre patch version 5.4.7.2

Note: There is a bug in the F5 Navigator window that does not set the tree content select mode to multiple selection on opening in root mode. The Content Navigation View button needs to be toggled off then back on for multiselection to work. This is not so with the Sidebar Navigator as the Content Navigation View button must always be toggled to set root mode.

Steps to reproduce with patch reverted or in version 5.4.7.2

1) open the Example document
2) F5 to open the Navigator window
3) (IMPORTANT) toggle off then back on the Content Navigation View by clicking the Content Navigation View button twice
3) click on any Überschrift 2 paragraph in the document
highlighted heading in Navigator window changes to clicked paragraph heading
4) click on the next or any other Überschrift 2 paragragh
both clicked paragraph headings in Navigator window are highlighted
5) move mouse pointer into Navigator window (Do not click any mouse buttons so that the Navigator window does not grab focus)
6) use mouse wheel or mouse pad wheel action to scroll highlighted heading out of view

Result:
When update timer fires the last highlighted heading in the Navigator window jumps back into view.
Comment 12 Jim Raykowski 2018-09-22 18:22:55 UTC
This behavior has been present since introduction of multiply selection of Headings. (see bug 54834)

Here is a patch that fixes this bug and preserves fix for bug 114724:

https://gerrit.libreoffice.org/#/c/60906/
Comment 13 Xisco Faulí 2018-09-22 18:33:22 UTC
(In reply to Jim Raykowski from comment #12)
> This behavior has been present since introduction of multiply selection of
> Headings. (see bug 54834)
> 
> Here is a patch that fixes this bug and preserves fix for bug 114724:
> 
> https://gerrit.libreoffice.org/#/c/60906/

Oh nice, I was about to investigate it further when I read your comment.
Thank you very much for fixing this... removing the incorrect keywords...
Comment 14 Commit Notification 2018-10-07 06:55:43 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3250c27b86d420d4891e1f83d8b11f9999b2a7d0

tdf#119900 Fix Navigator Content Navigation View Headings focus

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Cor Nouws 2018-10-07 09:04:59 UTC
I've experienced the same, but not yet reported etc etc.
So thanks Harald, Xisco, Jim, * !
Comment 16 Harald Koester 2019-04-09 08:40:41 UTC
Verified with version 6.2.0 (64 Bit, Win 10). I checked the cases of initial report and of comment 11. In both cases LibO works as expected.

Thanks for fixing.