tdf#119900 Fix Navigator Content Navigation View Headings focus

Change-Id: I884ae9d1f13646782f56a982d3d8dc0bc3aacee0
Reviewed-on: https://gerrit.libreoffice.org/60906
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>