sw/source/uibase/utlui/content.cxx
@@ -2108,7 +2108,6 @@ bool SwContentTree::HasContentChanged()
             const SwOutlineNodes::size_type nActPos = GetWrtShell()->GetOutlinePos(MAXLEVEL);
             SvTreeListEntry* pFirstEntry = First();
 
-            SelectAll(false);
             while( nullptr != (pFirstEntry = Next(pFirstEntry)) )
             {
                 assert(dynamic_cast<SwOutlineContent*>(static_cast<SwTypeNumber*>(pFirstEntry->GetUserData())));
@@ -2120,6 +2119,8 @@ bool SwContentTree::HasContentChanged()
                         MakeVisible(pFirstEntry);
                     }
                 }
+                else
+                    Select(pFirstEntry, false);
             }
 
         }
